--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
  "scripts": {
   "dev": "next dev",
   "build": "next build",
-  "start": "next start"
+  "start": "next start",
+  "lint": "eslint . --ext .js, .jsx, .ts, .tsx --no-error-on-unmatched-pattern"
  },
  "dependencies": {
-  "eslint": "^8.57.1",
   "eslint-config-next": "^15.5.12",
   "next": "^15.5.12",
   "react": "^18.3.1",
   "react-dom": "^18.3.1"
+ },
+ "devDependencies": {
+  "eslint-config-prettier": "^10.1.8",
+  "prettier": "^3.8.1"
  }
 }
