chore: adicionar scripts de formatacao

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dev": "next dev",
   "build": "next build",
   "start": "next start",
-  "lint": "eslint . --ext .js, .jsx, .ts, .tsx --no-error-on-unmatched-pattern"
+  "lint": "eslint . --ext .js, .jsx, .ts, .tsx --no-error-on-unmatched-pattern",
+  "format":"prettier --write",
+  "format:check":"prettier --check ."
  },
  "dependencies": {
   "eslint-config-next": "^15.5.12",
