--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "build": "next build",
   "start": "next start",
   "lint": "eslint . --ext .js, .jsx, .ts, .tsx --no-error-on-unmatched-pattern",
-  "format":"prettier --write",
-  "format:check":"prettier --check ."
+  "format": "prettier --write",
+  "format:check": "prettier --check ."
  },
  "dependencies": {
   "eslint-config-next": "^15.5.12",
@@ -21,7 +21,11 @@
   "react-dom": "^18.3.1"
  },
  "devDependencies": {
+  "@types/node": "^24.11.0",
+  "@types/react": "^18.3.28",
+  "@types/react-dom": "^18.3.7",
   "eslint-config-prettier": "^10.1.8",
-  "prettier": "^3.8.1"
+  "prettier": "^3.8.1",
+  "typescript": "^5.9.3"
  }
 }
